--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -30,16 +30,6 @@
 			display: flex;
 			justify-content: space-between;
 			height: 100%;
-			.main-menu {
-				display: flex;
-				align-items: center;
-				margin: 0;
-				height: 100%;
-				li {
-					list-style: none;
-					margin: 0 1em;
-				}
-			}
 			.header-right {
 				display: flex;
 			}
@@ -50,18 +40,6 @@
 			}
 			align-self: flex-start;
 			height: 100%;
-			.main-menu {
-				padding-left: 0;
-				li {
-					display: flex;
-					align-items: center;
-					list-style: none;
-					height: 3em;
-					a {
-						width: 100%;
-					}
-				}
-			}
 		}
 		.mobile-menu > div > button {
 			font-size: 1.5em;
