--- a/src/components/Section/section.module.scss
+++ b/src/components/Section/section.module.scss
@@ -1,23 +1,22 @@
 $example-margin-top: calc(#{$h2-margin} + #{$h2-margin} + #{$topic-line-height});
 
 .section {
-	border-top: $layout-border;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin-bottom: $main-padding;
+	margin-bottom: 2.5rem;
 	h2  {
 		margin: $h2-margin 0;
 		line-height: $topic-line-height;
 	}
 	.left-column {
-		max-width: 50%;
-		flex-grow: 1;
+	    flex: 50%;
 		align-self: flex-start;
 		padding-right: calc(#{$main-padding} / 2);
 	}
 	.right-column {
-		flex-grow: 1;
+	    flex: 50%;
+	    max-width: 50%;
 		position: -webkit-sticky;
 		position: sticky;
 		align-self: flex-start;
